<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_image_description">SoftLock Culling System with Voice Controlled Culling</string>
    <string name="enter_catch_lbs_and_ozs">Enter Catch (Lbs and ozs)</string>
    <string name="img_setup">Set Up Page</string>
    <string name="addCatchBtn">Add a Catch</string>
    <string name="timer_place_holder">Time Now</string>
    <string name="tournament_activity_description">enter the weights of the catch and the app suggests the fish to cull and gives the total weight</string>
    <string name="save_catch">Save_Catch</string>
    <string name="goto_SetUp_description">Set_Up</string>
    <string name="todays_Fishing_Log">Fishing_Log</string>
    <string name="days_End_time">End Time</string>
    <string name="fun_Day">Fun Day</string>
    <string name="gps_info">GPS will be ON only to get location of your catch</string>
    <string name="voice_info">Voice Commands Enable or Disable</string>
    <string name="cancel">Cancel</string>
    <string name="enter_catch_details_inches">Species and Length -Inches-</string>
    <string name="inches">Inches</string>
    <string name="_4ths_of_inch">/4ths of inch</string>
    <string name="select_species">Select Species</string>
    <string name="edit_catch_entry_lbs">Edit Catch Entry Lbs</string>
    <string name="edit_catch_entry_kgs">Edit Catch Kgs</string>
    <string name="edit_catch_entry_inches">Edit Catch Inches</string>
    <string name="edit_catch_entry_cms">Edit Catch Cms</string>
    <string name="enter_catch_in_kgs">Enter Catch in Kgs</string>
    <string name="enter_cm_and_mm">Enter Cm and mm</string>
    <string name="cms_0_to_99">Cms 0 to 99</string>
    <string name="_0_to_9_mm">0 to 9 mm</string>
    <string name="enter_inches_and_4ths">Enter Inches and 4ths</string>
    <string name="kgs_100_0_to_99">Kgs/100 0 to 99</string>
    <string name="kgs_0_to_99kgs">-Kgs- 0 to 99Kgs</string>
    <string name="using_culling_app_in_manual_mode"><u>Using App in Manual Mode</u></string>
    <string name="select_the_button_for_each_topic">Select the button for each topic</string>
    <string name="goto_setup">Goto setup</string>
    <string name="weight_lbs_ozs">Weight Lbs/ozs</string>
    <string name="letter_of_color_clip_for_color_blind">Letter of Color Clip for Color Blind</string>
    <string name="main_page">main Page</string>
    <string name="setup">SetUp</string>
    <string name="ozs">ozs</string>
    <string name="lbs">Lbs</string>
    <string name="lbs_ozs">Lbs ozs</string>
    <string name="tournament_species">Tournament Species</string>
    <string name="fish_image">Fish Image</string>
    <string name="select_clip_color">Select Clip Color</string>
    <string name="kgs">Kgs</string>
    <string name="x_00">X.00</string>
    <string name="_0_3_4ths">0–3 /4ths</string>
    <string name="_4ths">/4ths</string>
    <string name="_0_99_cms">0–99 Cms</string>
    <string name="cms">Cms</string>
    <string name="_0_9_mm">0–9 mm</string>
    <string name="mm">mm</string>
    <string name="menu">menu</string>
    <string name="fun_day_weight">Fun Day Weight</string>
    <string name="fun_day_length">Fun Day Length</string>
    <string name="tournament_weight">Tournament Weight</string>
    <string name="tournament_length">Tournament Length</string>
    <string name="weight_kgs">WEIGHT Kgs</string>
    <string name="length_inches">Length Inches</string>
    <string name="total_length_cms">Total Length Cms</string>
    <string name="save_catch_button">Save Catch Button</string>
    <string name="cancel_out">Cancel out</string>
    <string name="_18_ozs">18 ozs</string>
    <string name="using_voice_controls"><u>Using Voice Controls</u></string>
    <string name="enabling_voice_controls">Enabling Voice Controls</string>
    <string name="the_hands_free_fishing_log">Your Hands-Free Fishing Log</string>
    <string name="voice_controls">Voice Controls</string>
    <string name="set_up">Set_Up</string>
    <string name="teach_the_computer">Teach the computer. \n\ You will teach the computer to recognize the key words that are used with this Catch and Call Tracker app. The better the computer recognizes your words the easier the commands will be followed. Your time on the water is precious so lets make the best of it.</string>
    <string name="say_the_words">Say the Words</string>
    <string name="what_computer_heard">What The Computer Heard 👂</string>
    <string name="no_bluetooth_device">No Bluetooth Device</string>
    <string name="test_with_bt">🎧 Test with %s</string>
    <string name="press_the_btn">This is what you say when you are ready press the mic button of the cellphone 🤳</string>
    <string name="save_selection">Save Selection</string>
    <string name="voice_commands_or_manual_input">Manual Input \n\ or\n\ Hands Free\n\With the Pro_VC\n\ Voice Commands </string>
    <string name="you_can_add_your_own_species_to_the_list">You Can Add Your Own Species to the List\n\ And You Can Edit or Delete Your Added Species</string>
    <string name="select_up_to_8_species">Select Up To 8 Species\n\For the Main Species List</string>
    <string name="editable_species_list"><u>Editable Species List</u></string>
    <string name="user_can">User can Select or Add Species to Target List</string>
    <string name="save_species_list">Save Species List</string>
    <string name="add_species">Add Species</string>
    <string name="error_recognizing_speech">Error recognizing speech.</string>
    <string name="drag_handle_for_user">drag handle for user</string>
    <string name="species">Species</string>
    <string name="fish_species_image">Fish species image</string>
    <string name="move_the_species_up_down_as_needed">Move the Species Up/Down as Needed</string>
    <string name="customize_species_list">Customize Species List</string>
    <string name="start_fishing_event">Start Fishing Event</string>
    <string name="select_the_type_of_fishing">Select the type of fishing event and what species as well as gps</string>
    <string name="look_up_map">Look-Up Map</string>
    <string name="map_settings">Map Settings</string>
    <string name="learn_about_voice_controls">Learn About Voice Controls</string>
    <string name="manual_controls">Manual Controls</string>
    <string name="check_out_the_how_to_pages">Check out the How To Pages</string>
    <string name="look_up_your_catches_on_google_maps">Look Up Your Catches on Google Maps</string>
    <string name="spacers">--</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="culling_limit">Culling #</string>
    <string name="tournament">Tournament</string>
    <string name="fun_day">Fun Day</string>
    <string name="type_of_fishing_day">Type of Fishing Day</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="type_of_units">Type of Units</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="type_of_measuring">Type of Measuring</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="gps_pin">Mark if GPS Location for Catch</string>
    <string name="log_catch_location">Log Location</string>
    <string name="gps_on">GPS\nON</string>
    <string name="gps_off">GPS\nOFF</string>
    <string name="close_map">Close Map</string>
    <string name="select_query_fields_for_map">Select Query Fields for Map</string>
    <string name="bass_fighting">bass jumping fighting the angler in boat</string>
    <string name="training_voice_commands">Training Voice Commands</string>
    <string name="words_to_practice">Words to Practice</string>
    <string name="select_data_to_share"><u>Select Data to Share</u></string>
    <string name="include_date_and_time">Include Date and Time</string>
    <string name="include_species">Include Species</string>
    <string name="include_weight">Include Weight</string>
    <string name="include_length">Include Length</string>
    <string name="include_gps_coordinates">Include GPS Coordinates</string>
    <string name="include_day">Include Day Type\n(Fun Day/Tournament)</string>
    <string name="generate_csv_file">Generate\n CSV File</string>
    <string name="share_csv">Share CSV</string>
    <string name="top_5">Top 5</string>
    <string name="find_your_top_5">Find Your Top 5</string>
    <string name="share_fishing_logs">Share Fishing Logs</string>
    <string name="share_your_fishing_logs">Share Your Fishing Logs</string>
    <string name="different_ways_to_look_up_your_catch_log">Different Ways to Look Up Your Catch Log</string>
    <string name="search">Search</string>
    <string name="share_results">Share Results</string>
    <string name="top_5_catches_this_month"><u>Top 5 Catches This Month</u></string>
    <string name="max_weight">Max Weight</string>
    <string name="min_weight">Min Weight</string>
    <string name="catch_and_call_logo">Catch and Call Logo</string>
    <string name="what_is_voice_command_control">What is Voice Command Control</string>
    <string name="teach_the_application_your_voice_and_how_you_say_words_phrases">Teach the application your voice and how you say words / phrases</string>
    <string name="teaching_voice_control">Teaching Voice Control</string>
    <string name="see_and_share_catches">See and Share\n\ Catches</string>
    <string name="reset_species_list">Reset Species List</string>
    <string name="main_species_list"><u>Main Species List</u></string>
    <string name="this_is_where_you_arrange_the_species_on_the_list_for_all_of_the_species_listings_throughout_the_catch_and_call_app">This is where you arrange the Species on the List for all of the Species Listings throughout the Catch_and_Call app</string>
    <string name="select_date_range"><u> Select Date Range </u></string>
    <string name="confirm">Confirm</string>
    <string name="select_event_type"><u> Select Event Type </u></string>
    <string name="both">Both</string>
    <string name="select_measurement_type"><u>Select Measurement Type</u></string>
    <string name="start_the_fishing_day">Start the Fishing Day</string>
    <string name="tournament_catch_kgs">Tournament Catch Kgs</string>
    <string name="tournament_catch_cms">Tournament Catch Cms</string>
    <string name="_3_lbs">3 Lbs</string>
    <string name="dot">.</string>
    <string name="todays_fishing_log" tools:ignore="Typos">todays fishing log</string>
    <string name="add_catch">Add Catch:</string>
    <string name="species_and_length_cms">Species and Length -Cms-</string>
    <string name="fun_day_catch_kgs">Fun Day Catch -Kgs-</string>
    <string name="_0_xx">0.XX</string>
    <string name="_0_to_99">0 to 99</string>
    <string name="_0_to_15">0 to 15</string>
    <string name="centimeters">Centimeters</string>
    <string name="_0_99_inches">0–99 Inches</string>
    <string name="_00_0_cms">00.0 Cms</string>
    <string name="alter_species_list">Alter Species List</string>
    <string name="just_say_the_word">Just Say the Word</string>
    <string name="and_you_can">and you can</string>
    <string name="track_your_catch">Track Your Catch</string>
    <string name="edit_users_species">Edit Users Species</string>
    <string name="tournament_catch_inches">Tournament Catch Inches</string>
    <string name="select_the_logged_field_data_of_your_catches_to_see_on_the_map">Select the logged field data of your catches to see on the map</string>
    <string name="dates_of_query">Dates of Query</string>
    <string name="date">Date</string>
    <string name="species_of_query">Species of Query</string>
    <string name="event_type_of_query">Event Type of Query</string>
    <string name="events">Events</string>
    <string name="share_klm">share KLM</string>
    <string name="species_image">Species Image</string>
    <string name="generate_kml_file">Generate \nKML File</string>
</resources>