<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@color/very_lite_grey">


    <ImageButton
        android:id="@+id/btnSelectSpeciesNameSelect"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:contentDescription="@string/species_image"
        android:focusableInTouchMode="false"
        app:srcCompat="@drawable/ic_edit" />

    <ImageView
        android:id="@+id/imgSpeciesSelect"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/fish_image"/>

    <TextView
        android:id="@+id/txtSpeciesNameSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/species"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


    <ImageButton
        android:id="@+id/btnEditSpeciesNameSelect"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/edit_users_species"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_edit"
        android:visibility="gone" />


</LinearLayout>
