<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Options -->

        <TextView
            android:id="@+id/txtShareHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/select_data_to_share"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chkIncludeDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/lite_grey"
            android:text="@string/include_date_and_time"
            android:textColor="@color/clip_blue"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chkIncludeSpecies"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/lite_grey"
            android:text="@string/include_species"
            android:textColor="@color/clip_blue"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chkIncludeWeight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:background="@color/lite_grey"
            android:text="@string/include_weight"
            android:textColor="@color/clip_blue"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chkIncludeLength"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/lite_grey"
            android:text="@string/include_length"
            android:textColor="@color/clip_blue"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chkIncludeGPS"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/lite_grey"
            android:text="@string/include_gps_coordinates"
            android:textColor="@color/clip_blue"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chkIncludeCatchType"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"
            android:background="@color/lite_grey"
            android:text="@string/include_day"
            android:textColor="@color/clip_blue"
            android:textSize="20sp" />


        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="10sp"
            android:background="@color/clip_blue" />

        <!-- Generate CSV Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginVertical="10dp" >

            <Button
                android:id="@+id/btnGenerateCSV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:background="@drawable/btn_outline_blue"
                android:text="@string/generate_csv_file"
                android:textColor="@color/clip_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"/>

            <Button
                android:id="@+id/btnGenerateKML"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_outline_softlock_blue"
                android:padding="10dp"
                android:text="@string/generate_kml_file"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnViewFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/btn_outline_green"
            android:text="View csv file"
            android:textColor="@color/clip_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:layout_marginVertical="10dp" >

        <!-- Share Button -->
        <Button
            android:id="@+id/btnShareCSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/btn_outline_yellow"
            android:text="@string/share_csv"
            android:textColor="@color/clip_blue"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <!-- Share Button -->
        <Button
            android:id="@+id/btnShareKLM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:background="@drawable/btn_outline_lt_brown"
            android:text="@string/share_klm"
            android:textColor="@color/clip_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5sp"
            android:background="@color/clip_blue" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginVertical="15dp">

            <Button
                android:id="@+id/btnMainSFL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="18dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_menu_setup"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/main_page"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSetUpSFLogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/btn_menu_setup"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/set_up"
                android:textColor="@color/clip_blue"
                android:textSize="28sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>
